Organizei os arquivos em pastas específicas, assim como corrigi a navegação relacionada a essas pastas. Ainda deve ser feito: Corrigir o que quer que seja cadeado.jpeg.tiff

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- CSS externo -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 <header>
     <div class="logo">
         <a href="index.html">
-            <img src="IMG_2751.jpg" alt="Logo RZ Produções">
+            <img src="/static/IMG_2751.jpg" alt="Logo RZ Produções">
         </a>
     </div>
     
@@ -40,7 +40,7 @@
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-<script src="firebase.js"></script>
+<script src="/static/firebase.js"></script>
 
 
 </body>
@@ -68,7 +68,7 @@
             <div class="eventos-grid">
 
                 <div class="evento-card">
-                    <img src="cadeado.jpeg.tiff" alt="xxxx">
+                    <img src="/static/cadeado.jpeg.tiff" alt="xxxx">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXXXXXXXXXXX</p>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="evento-card">
-                    <img src="cadeado.jpeg.tiff" alt="Rave Secreta">
+                    <img src="/static/cadeado.jpeg.tiff" alt="Rave Secreta">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXXXXXXXXXXX</p>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="evento-card">
-                    <img src="cadeado.jpeg.tiff" alt="Noite de Samba">
+                    <img src="/static/cadeado.jpeg.tiff" alt="Noite de Samba">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXXXXXXXXXXX</p>
@@ -107,7 +107,7 @@
             <div class="eventos-grid">
 
                 <div class="evento-card">
-                    <img src="img/evento4.jpg" alt="Festival de Verão 2026">
+                    <img src="/static/img/evento4.jpg" alt="Festival de Verão 2026">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXX</p>
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="evento-card">
-                    <img src="img/evento5.jpg" alt="Reveillon Premium">
+                    <img src="/static/img/evento5.jpg" alt="Reveillon Premium">
                     <div class="card-info">
                         <h3>XXX</h3>
                         <p>XXXXXXXXX</p>
@@ -174,7 +174,7 @@
 </footer>
 
 <!-- JS externo -->
-<script src="script.js"></script>
+<script src="/static/script.js"></script>
 
 <!-- Inserir ANO automático -->
 <script>
