--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -7,13 +7,13 @@
 
     <!-- Fontes -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
 
-    <script src="firebase.js"></script>
+    <script src="/static/firebase.js"></script>
 </head>
 <body>
 
@@ -103,6 +103,6 @@
     </div>
 </footer>
 
-    <script src="cadastro.js"></script>
+    <script src="/static/cadastro.js"></script>
 </body>
 </html>
