--- a/templates/eventos.html
+++ b/templates/eventos.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- CSS externo -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 
   <header>
     <div class="logo">
         <a href="index.html">
-            <img src="IMG_2751.jpg" alt="Logo RZ Produções">
+            <img src="/static/IMG_2751.jpg" alt="Logo RZ Produções">
         </a>
     </div>
     
@@ -40,7 +40,7 @@
 
             <div class="evento-detalhe">
 
-                <img src="img/evento1.jpg" alt="Imagem do Evento" class="banner-evento">
+                <img src="/static/img/evento1.jpg" alt="Imagem do Evento" class="banner-evento">
 
                 <div class="info-evento">
                     <h1 class="titulo-evento">0800</h1>
@@ -70,7 +70,7 @@
             <div class="eventos-grid">
 
                 <div class="evento-card">
-                    <img src="img/evento4.jpg" alt="Festival 2026">
+                    <img src="/static/img/evento4.jpg" alt="Festival 2026">
                     <div class="card-info">
                         <h3>Festival de Verão 2026</h3>
                         <p>Maior festival de música eletrônica</p>
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="evento-card">
-                    <img src="img/evento5.jpg" alt="Reveillon 2025">
+                    <img src="/static/img/evento5.jpg" alt="Reveillon 2025">
                     <div class="card-info">
                         <h3>Reveillon Premium</h3>
                         <p>Virada mais luxuosa do país</p>
