--- a/templates/pagina-interna.html
+++ b/templates/pagina-interna.html
@@ -9,7 +9,7 @@
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-    <script src="firebase.js"></script>
+    <script src="/static/firebase.js"></script>
 </head>
 
 <body class="bg-gray-900 text-white">
