--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
 <header>
     <div class="logo">
-        <a href="index.html">
+        <a href="/">
             <img src="/static/IMG_2751.jpg" alt="Logo RZ Produções">
         </a>
     </div>
@@ -25,11 +25,11 @@
     <nav>
         <a href="#eventos">Eventos</a>
         <a href="#futuras">Futuras Organizações</a>
-        <a href="contato.html">Contato</a> 
+        <a href="/contato">Contato</a> 
     </nav>
     
     <div class="acoes-header">
-        <a href="login.html" class="btn-acesso">Acesse / Entrar</a>
+        <a href="/login" class="btn-acesso">Acesse / Entrar</a>
     </div>
 </header>
 
@@ -55,9 +55,9 @@
     </div>
 
     <div class="hero-content">
-        <h1>Zero0800: A Festa do Ano!</h1>
+        <h1>Zero800: A Festa do Ano!</h1>
         <p>01 de Janeiro | Blue center, Rio de Janeiro</p>
-        <a href="compra.html" class="btn-compre-agora">COMPRE AGORA</a>
+        <a href="/eventos" class="btn-compre-agora">COMPRE AGORA</a>
     </div>
 </section>
 
