--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - FestaClub</title>
+    <title>Login - RZ Produções</title>
 
     <!-- Fontes e Ícones -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
 
     <header>
     <div class="logo">
-        <a href="index.html">
+        <a href="/">
             <img src="/static/IMG_2751.jpg" alt="Logo RZ Produções">
         </a>
     </div>
@@ -58,7 +58,7 @@
 
                 <p class="cadastro">
                     Não tem conta?
-                    <a href="cadastro.html" class="link-cadastro">Criar conta</a>
+                    <a href="/cadastro" class="link-cadastro">Criar conta</a>
                 </p>
 
             </div>
