--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criar Conta - FestaClub</title>
+    <title>Criar Conta - RZ Produções</title>
 
     <!-- Fontes -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
 
             <p class="cadastro">
                 Já tem conta?
-                <a href="login.html" class="link-cadastro">Entrar</a>
+                <a href="/login" class="link-cadastro">Entrar</a>
             </p>
 
         </div>
