--- a/templates/pagina-interna.html
+++ b/templates/pagina-interna.html
@@ -25,7 +25,7 @@
     <script>
         auth.onAuthStateChanged(user => {
             if (!user) {
-                window.location.href = "login.html";
+                window.location.href = "/login";
             }
         });
 
